upgrade to Symfony 2.8
Conflicts:
	.gitignore
	composer.lock
	src/Netresearch/TimeTrackerBundle/Controller/AdminController.php
	src/Netresearch/TimeTrackerBundle/Controller/BaseController.php
	src/Netresearch/TimeTrackerBundle/Controller/ControllingController.php
	src/Netresearch/TimeTrackerBundle/Controller/CrudController.php
	src/Netresearch/TimeTrackerBundle/Controller/DefaultController.php
	src/Netresearch/TimeTrackerBundle/Controller/InterpretationController.php
	src/Netresearch/TimeTrackerBundle/Controller/SettingsController.php
	src/Netresearch/TimeTrackerBundle/Controller/StatusController.php
	src/Netresearch/TimeTrackerBundle/Controller/UserController.php
	src/Netresearch/TimeTrackerBundle/Entity/Activity.php
	src/Netresearch/TimeTrackerBundle/Entity/Entry.php
	src/Netresearch/TimeTrackerBundle/Entity/Project.php
	vendor/autoload.php
	vendor/composer/autoload_classmap.php
	vendor/composer/autoload_files.php
	vendor/composer/autoload_namespaces.php
	vendor/composer/autoload_psr4.php
	vendor/composer/autoload_real.php
	vendor/composer/autoload_static.php
	vendor/composer/installed.json
	vendor/doctrine/common/.travis.yml
	vendor/doctrine/common/composer.json
	vendor/doctrine/common/lib/Doctrine/Common/ClassLoader.php
	vendor/doctrine/common/lib/Doctrine/Common/Persistence/AbstractManagerRegistry.php
	vendor/doctrine/common/lib/Doctrine/Common/Persistence/Event/LoadClassMetadataEventArgs.php
	vendor/doctrine/common/lib/Doctrine/Common/Persistence/Event/PreUpdateEventArgs.php
	vendor/doctrine/common/lib/Doctrine/Common/Persistence/Mapping/AbstractClassMetadataFactory.php
	vendor/doctrine/common/lib/Doctrine/Common/Persistence/Mapping/Driver/AnnotationDriver.php
	vendor/doctrine/common/lib/Doctrine/Common/Persistence/Mapping/Driver/DefaultFileLocator.php
	vendor/doctrine/common/lib/Doctrine/Common/Persistence/Mapping/Driver/MappingDriverChain.php
	vendor/doctrine/common/lib/Doctrine/Common/Persistence/Mapping/Driver/PHPDriver.php
	vendor/doctrine/common/lib/Doct

--- a/src/Netresearch/TimeTrackerBundle/Resources/views/Default/login.html.twig
+++ b/src/Netresearch/TimeTrackerBundle/Resources/views/Default/login.html.twig
@@ -15,9 +15,11 @@
 					modal: true,
 					draggable: false,
 					items: [
+                    {% for flashMessage in app.session.flashbag.get('error') %}
 						Ext.create('Ext.panel.Panel', {
-							html: "{{ app.session.flash('error') }}"
+							html: "{{ flashMessage }}"
 						}),
+        			{% endfor %}
 					    Ext.create('Ext.form.Panel', {
 					    	bodyPadding: 5,
 					    	standardSubmit: true,
@@ -35,7 +37,7 @@
 					    				specialkey: function(field, e) {
 					    					if(e.getKey() == e.ENTER) {
 					    						form = field.up('form').getForm();
-					    						
+
 					    						form.submit();
 					    					}
                                         },
@@ -53,7 +55,7 @@
 					    				specialkey: function(field, e) {
 					    					if(e.getKey() == e.ENTER) {
 					    						form = field.up('form').getForm();
-					    						
+
 					    						form.submit();
 					    					}
 					    				}
@@ -74,7 +76,7 @@
 				                	scope: this,
 				                	handler: function(btn) {
 				                		var form = btn.up('form').getForm();
-				                		
+
 				                		if(form.isValid()) {
 					                		form.submit();
 				                		}
@@ -84,7 +86,7 @@
 					    })
 					]
 				});
-				
+
 				window.show();
 			});
         </script>
