--- a/src/Netresearch/TimeTrackerBundle/Resources/views/Default/index.html.twig
+++ b/src/Netresearch/TimeTrackerBundle/Resources/views/Default/index.html.twig
@@ -20,13 +20,15 @@
         <script type="text/javascript" src="{{ asset('bundles/netresearchtimetracker/js/ext-js/locale/ext-lang-' ~ locale ~ '.js') }}"></script>
         <script type="text/javascript" src="{{ asset('bundles/netresearchtimetracker/js/main.js') }}"></script>
         <script type="text/javascript" src="{{ asset('bundles/netresearchtimetracker/js/Notification.js') }}"></script>
-        {% if app.session.flash('error') %}
+        {% for flashMessage in app.session.flashbag.get('error') %}
+
             <script type="text/javascript">
-                alert("{{ app.session.flash('error') }}");
+                alert("{{ flashMessage }}");
             </script>
-        {% endif %}
+
+        {% endfor %}
     </head>
     <body>
-		<div id="grid"></div> 
+		<div id="grid"></div>
     </body>
 </html>
