--- a/src/Netresearch/TimeTrackerBundle/Resources/views/Default/index.html.twig
+++ b/src/Netresearch/TimeTrackerBundle/Resources/views/Default/index.html.twig
@@ -2,10 +2,12 @@
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-        <title>Netresearch TimeTracker</title>
+        <title>{{ apptitle }}</title>
         <link rel="stylesheet" href="{{ asset('bundles/netresearchtimetracker/js/ext-js/resources/css/ext-all-gray.css') }}" type="text/css">
         <link rel="stylesheet" href="{{ asset('bundles/netresearchtimetracker/css/timetracker.css') }}" type="text/css">
         <script type="text/javascript">
+            var globalConfig = eval("(" + '{{ globalConfig|raw }}' + ")");
+
             var environment = '{{ environment }}';
 
             var customersData = eval("(" + '{{ customers|raw }}' + ")");
