--- a/src/Netresearch/TimeTrackerBundle/Resources/views/Default/status.html.twig
+++ b/src/Netresearch/TimeTrackerBundle/Resources/views/Default/status.html.twig
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-        <title>Netresearch TimeTracker</title>
+        <title>{{ apptitle }}</title>
         <link rel="stylesheet" href="{{ asset('bundles/netresearchtimetracker/js/ext-js/resources/css/ext-all-gray.css') }}" type="text/css">
         <link rel="stylesheet" href="{{ asset('bundles/netresearchtimetracker/css/timetracker.css') }}" type="text/css">
         <script type="text/javascript">
