upgrade flash code for smyfony 2.8 - fixes fatal error caused by old Symfony 2.1 code

--- a/src/Netresearch/TimeTrackerBundle/Resources/views/Default/status.html.twig
+++ b/src/Netresearch/TimeTrackerBundle/Resources/views/Default/status.html.twig
@@ -8,11 +8,13 @@
         <script type="text/javascript">
             setTimeout(function() { window.location.reload() }, 90000);
         </script>
-        {% if app.session.flash('error') %}
+        {% for flashMessage in app.session.flashbag.get('error') %}
+
             <script type="text/javascript">
-                alert("{{ app.session.flash('error') }}");
+                alert("{{ flashMessage }}");
             </script>
-        {% endif %}
+
+        {% endfor %}
     </head>
     <body class="status_page">
         <div id="loginStatus" class="{{ loginClass }}">Login-Status</div> 
