define JavaScript 'url' with application base URL - fixes problem JavaScript requests did not use /app_dev.php/

--- a/src/Netresearch/TimeTrackerBundle/Resources/views/Default/index.html.twig
+++ b/src/Netresearch/TimeTrackerBundle/Resources/views/Default/index.html.twig
@@ -29,6 +29,9 @@
             </script>
 
         {% endfor %}
+        <script type="text/javascript">
+            var url = {{ url('_start')|escape|json_encode|raw }};
+        </script>
     </head>
     <body>
 		<div id="grid"></div>
