--- a/src/Netresearch/TimeTrackerBundle/Resources/views/Default/login.html.twig
+++ b/src/Netresearch/TimeTrackerBundle/Resources/views/Default/login.html.twig
@@ -7,6 +7,7 @@
         <script type="text/javascript" src="{{ asset('bundles/netresearchtimetracker/js/ext-js/ext-all.js') }}"></script>
         <script type="text/javascript" src="{{ asset('bundles/netresearchtimetracker/js/ext-js/locale/ext-lang-' ~ locale ~ '.js') }}"></script>
         <script type="text/javascript">
+            var url = {{ url('_start')|escape|json_encode|raw }};
         	Ext.onReady(function() {
 				var window = Ext.create('Ext.window.Window', {
 					title: 'Login',
