--- a/src/Netresearch/TimeTrackerBundle/Resources/views/Default/index.html.twig
+++ b/src/Netresearch/TimeTrackerBundle/Resources/views/Default/index.html.twig
@@ -6,17 +6,17 @@
         <link rel="stylesheet" href="{{ asset('bundles/netresearchtimetracker/js/ext-js/resources/css/ext-all-gray.css') }}" type="text/css">
         <link rel="stylesheet" href="{{ asset('bundles/netresearchtimetracker/css/timetracker.css') }}" type="text/css">
         <script type="text/javascript">
-            var statusUrlHtml = {{ url('check_page')|escape|json_encode|raw }};
-            var logoutUrlHtml = {{ url('_logout')|escape|json_encode|raw }};
-            var globalConfig = {{ globalConfig|json_encode|raw }};
+            const statusUrlHtml = {{ url('check_page')|escape|json_encode|raw }};
+            const logoutUrlHtml = {{ url('_logout')|escape|json_encode|raw }};
+            const globalConfig = {{ globalConfig|json_encode|raw }};
 
-            var environment = {{ environment|json_encode|raw }};
+            const environment = {{ environment|json_encode|raw }};
 
-            var customersData = {{ customers|json_encode|raw }};
+            const customersData = {{ customers|json_encode|raw }};
 
-            var projectsData = {{ projects|json_encode|raw }};
+            const projectsData = {{ projects|json_encode|raw }};
 
-            var settingsData = {{ settings|json_encode|raw }};
+            let settingsData = {{ settings|json_encode|raw }};
         </script>
         <script type="text/javascript" src="{{ asset('bundles/netresearchtimetracker/js/ext-js/ext-all.js') }}"></script>
         <script type="text/javascript" src="{{ asset('bundles/netresearchtimetracker/js/ext-js/locale/ext-lang-' ~ locale ~ '.js') }}"></script>
@@ -30,7 +30,7 @@
 
         {% endfor %}
         <script type="text/javascript">
-            var url = {{ url('_start')|escape|json_encode|raw }};
+            const url = {{ url('_start')|escape|json_encode|raw }};
         </script>
     </head>
     <body>
