fix asset paths in templates

--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -3,8 +3,8 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <title>{{ app_title }}</title>
-        <link rel="stylesheet" href="{{ asset('bundles/netresearchtimetracker/js/ext-js/resources/css/ext-all-gray.css') }}" type="text/css">
-        <link rel="stylesheet" href="{{ asset('bundles/netresearchtimetracker/css/timetracker.css') }}" type="text/css">
+        <link rel="stylesheet" href="{{ asset('/js/ext-js/resources/css/ext-all-gray.css') }}" type="text/css">
+        <link rel="stylesheet" href="{{ asset('/css/timetracker.css') }}" type="text/css">
         <script type="text/javascript">
             const statusUrlHtml = {{ url('check_page')|escape|json_encode|raw }};
             const logoutUrlHtml = {{ url('_logout')|escape|json_encode|raw }};
@@ -18,10 +18,10 @@
 
             let settingsData = {{ settings|json_encode|raw }};
         </script>
-        <script type="text/javascript" src="{{ asset('bundles/netresearchtimetracker/js/ext-js/ext-all.js') }}"></script>
-        <script type="text/javascript" src="{{ asset('bundles/netresearchtimetracker/js/ext-js/locale/ext-lang-' ~ locale ~ '.js') }}"></script>
-        <script type="text/javascript" src="{{ asset('bundles/netresearchtimetracker/js/main.js') }}"></script>
-        <script type="text/javascript" src="{{ asset('bundles/netresearchtimetracker/js/Notification.js') }}"></script>
+        <script type="text/javascript" src="{{ asset('/js/ext-js/ext-all.js') }}"></script>
+        <script type="text/javascript" src="{{ asset('/js/ext-js/locale/ext-lang-' ~ locale ~ '.js') }}"></script>
+        <script type="text/javascript" src="{{ asset('/js/main.js') }}"></script>
+        <script type="text/javascript" src="{{ asset('/js/Notification.js') }}"></script>
         {% for flashMessage in app.session.flashbag.get('error') %}
 
             <script type="text/javascript">
