--- a/templates/status.html.twig
+++ b/templates/status.html.twig
@@ -3,8 +3,8 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <title>{{ app_title }}</title>
-        <link rel="stylesheet" href="{{ asset('bundles/netresearchtimetracker/js/ext-js/resources/css/ext-all-gray.css') }}" type="text/css">
-        <link rel="stylesheet" href="{{ asset('bundles/netresearchtimetracker/css/timetracker.css') }}" type="text/css">
+        <link rel="stylesheet" href="{{ asset('/js/ext-js/resources/css/ext-all-gray.css') }}" type="text/css">
+        <link rel="stylesheet" href="{{ asset('/css/timetracker.css') }}" type="text/css">
         <script type="text/javascript">
             setTimeout(function() { window.location.reload() }, 90000);
         </script>
