--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="{{ asset('/css/timetracker.css') }}" type="text/css">
         <script type="text/javascript">
             const statusUrlHtml = {{ url('check_page')|escape|json_encode|raw }};
-            const logoutUrlHtml = {{ url('_logout')|escape|json_encode|raw }};
+            const logoutUrlHtml = {{ url('logout')|escape|json_encode|raw }};
             const globalConfig = {{ globalConfig|json_encode|raw }};
 
             const environment = {{ environment|json_encode|raw }};
