--- a/templates/login.html.twig
+++ b/templates/login.html.twig
@@ -26,7 +26,7 @@
 					    Ext.create('Ext.form.Panel', {
 					    	bodyPadding: 5,
 					    	standardSubmit: true,
-					    	url: "{{ path('_login_form') }}",
+					    	url: "{{ path('_login') }}",
 					    	items: [
                             {
                                 xtype: 'hiddenfield',
