--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -1,7 +1,8 @@
 <!DOCTYPE HTML>
-<html>
+<html lang="{{ app.request.locale }}">
     <head>
-        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>{{ apptitle }}</title>
         <link rel="stylesheet" href="{{ asset('build/js/ext-js/resources/css/ext-all-gray.css') }}" type="text/css">
         <link rel="stylesheet" href="{{ asset('build/css/timetracker.css') }}" type="text/css">
@@ -34,6 +35,7 @@
         </script>
     </head>
     <body>
-		<div id="grid"></div>
+        <a href="#main-content" class="skip-link">{{ 'Skip to main content'|trans }}</a>
+        <div id="grid"></div>
     </body>
 </html>
